# RuntimeCompiledCPlusPlus

./: .gitignore
Aurora/: Aurora.kdev4  CMakeLists.txt
Aurora-build/: CMakeCache.txt  ConsoleExample  Makefile  Project.cbp  cmake_install.cmake
Aurora/.kdev4/: Aurora.kdev4
Aurora/Aurora.xcworkspace/xcshareddata/: Aurora.xccheckout
Aurora/Examples/: CMakeLists.txt
Aurora/Examples/ConsoleExample/: CMakeLists.txt  ConsoleExample.cpp  ConsoleGame.cpp  ConsoleGame.h  IUpdateable.h  InterfaceIds.h  RuntimeObject01.cpp  StdioLogSystem.cpp  StdioLogSystem.h
Aurora/Examples/ConsoleExample/ConsoleExample.xcodeproj/: project.pbxproj
Aurora/Examples/ConsoleExample/ConsoleExample.xcodeproj/project.xcworkspace/xcshareddata/: ConsoleExample.xccheckout
Aurora/Examples/SimpleTest/: IObjectUtils.h
Aurora/Examples/SimpleTest/SimpleTest.xcodeproj/project.xcworkspace/xcshareddata/: SimpleTest.xccheckout
Aurora/RuntimeCompiler/: BuildTool.cpp  BuildTool.h  CMakeLists.txt  Compiler.h  Compiler_PlatformPosix.cpp  FileChangeNotifier.cpp  FileChangeNotifier.h  FileMonitor.cpp  FileMonitor.h  FileSystemUtils.h  ICompilerLogger.h  IFileChangeNotifier.h  IFileMonitor.h
Aurora/RuntimeCompiler/RuntimeCompiler.xcodeproj/: project.pbxproj
Aurora/RuntimeCompiler/SimpleFileWatcher/: .FileWatcherLinux.cpp.kate-swp  CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  FileWatcherImpl.h  FileWatcherLinux.cpp  FileWatcherLinux.h  FileWatcherOSX.cpp  FileWatcherOSX.h
Aurora/RuntimeObjectSystem/: CMakeLists.txt  IObject.h  IObjectFactorySystem.h  IRuntimeObjectSystem.h  ISimpleSerializer.h  ObjectInterface.h  ObjectInterfacePerModule.h  ObjectInterfacePerModuleSource.cpp  RuntimeInclude.h  RuntimeLinkLibrary.h  RuntimeObjectSystem.cpp  RuntimeObjectSystem.h  RuntimeObjectSystem_PlatformPosix.cpp  RuntimeProtector.h  RuntimeSourceDependency.h
Aurora/RuntimeObjectSystem/ObjectFactorySystem/: CMakeLists.txt  ObjectFactorySystem.cpp  ObjectFactorySystem.h
Aurora/RuntimeObjectSystem/SimpleSerializer/: CMakeLists.txt  SimpleSerializer.cpp  SimpleSerializer.h
Aurora/cmake/: ProjectFiles.cmake
AuroraBuild/: CMakeCache.txt  cmake_install.cmake
AuroraBuild/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
AuroraBuild/Examples/: cmake_install.cmake
AuroraBuild/Examples/ConsoleExample/: cmake_install.cmake
AuroraBuild/RuntimeCompiledCPlusPlus.xcodeproj/: project.pbxproj
AuroraBuild/RuntimeCompiledCPlusPlus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AuroraBuild/RuntimeCompiledCPlusPlus.xcodeproj/project.xcworkspace/xcshareddata/: RuntimeCompiledCPlusPlus.xccheckout
AuroraBuild/RuntimeCompiler/: cmake_install.cmake
AuroraBuild/RuntimeCompiler/SimpleFileWatcher/: cmake_install.cmake
AuroraBuild/RuntimeObjectSystem/: cmake_install.cmake
AuroraBuild/RuntimeObjectSystem/ObjectFactorySystem/: cmake_install.cmake
AuroraBuild/RuntimeObjectSystem/SimpleSerializer/: cmake_install.cmake
