cmake_minimum_required(VERSION 2.8)

macro (add_sources)
    file(RELATIVE_PATH _relPath "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
	set(Stupid "1")
    foreach (_src ${ARGN})
    	if(Stupid STREQUAL "1" )
    		set(Stupid "0")
    	else()
    	        if (_relPath)
	    			MESSAGE("${_relPath}/${_src}")
            		list (APPEND SRCS "${_relPath}/${_src}")
        		else()
            		list (APPEND SRCS "${_src}")
        		endif()
		endif()
    endforeach()

    if (_relPath)
    	MESSAGE("${ARGV0} " ${ARGV0} PARENT_SCOPE)
        set ("${ARGV0}" ${ARGV0} " ${SRCS} ")
    else()
    	MESSAGE("${ARGV0} " ${ARGV0})
    	set ("${ARGV0} " ${ARGV0} " ${SRCS}")
    endif()

endmacro()

option(BUILD_EXAMPLES "Build example applications" ON)

project(RuntimeCompiledCPlusPlus)

if(UNIX)
	set(BUILD_TYPE SHARED)
else()
	set(BUILD_TYPE STATIC)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
endif()

add_subdirectory(RuntimeCompiler)
add_subdirectory(RuntimeObjectSystem)
add_subdirectory(Examples)

